# CodeQualitySnake

./: .bazelrc  .clangd  .dockerignore  .gitattributes  .gitignore  BUILD  CMakeLists.txt  MODULE.bazel  Makefile  coverage.sh  highscores.db  lunch.sh  lunch_all_tests.sh  main.cpp  memory_leak_check.sh  menu_example.cpp  my_project  sqlCreate.cpp  variables.bzl
docker/: Dockerfile
inc/: board.hpp  board_mappings.hpp  board_position.hpp  direction.hpp  exceptions.hpp  game.hpp  limited_uint8_t.hpp  segment.hpp  snake.hpp  visualiser.hpp
src/: board.cpp  board_position.cpp  game.cpp  limited_uint8_t.cpp  segment.cpp  snake.cpp  visualiser.cpp
test/: board_position_test.cpp  board_test.cpp  game_test.cpp  limited_uint8_8_test.cpp  snake_test.cpp
tests/: game_test.cpp  snake_test.cpp
textures/: highScoresBackgrounds.png:Zone.Identifier
tools/SFML-controllers/inc/: high_score_controller.hpp  menu_controller.hpp  new_game_controller.hpp  options_controller.hpp
tools/SFML-controllers/src/: high_score_controller.cpp  menu_controller.cpp  new_game_controller.cpp  options_controller.cpp
tools/SFML-tools/inc/: menu.hpp  new_game_controller.hpp
tools/SFML-tools/src/: menu.cpp  new_game_controller.cpp
tools/inc/: assets_manager.hpp  candies.hpp  colors.hpp  database_manager.hpp  drawer.hpp  exceptions.hpp  mutexes.hpp  options_manager.hpp  screen_selector.hpp  selector_options.hpp  text_box.hpp  texture_loader.hpp  visualiser.hpp
tools/inc/config/: texture_config.hpp  variable_config.hpp
tools/src/: assets_manager.cpp  candies.cpp  colors.cpp  database_manager.cpp  drawer.cpp  options_manager.cpp  screen_selector.cpp  text_box.cpp  texture_loader.cpp  visualiser.cpp
tools/tests/: drawer_test.cpp  texture_loader_test.cpp  visualiser_test.cpp
